--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: url(../img/header.jpg) no-repeat center top;
+	background: url(../img/header.png) no-repeat center top;
 	padding-top: 60px;
 	text-align:center;
 	background-attachment: relative;
